manifest.yaml
# --- FRONTEND DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epitech-front-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epitech-front
  template:
    metadata:
      labels:
        app: epitech-front
    spec:
      containers:
      - name: front
        image: stephanparichon/epitech-front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
# --- FRONTEND SERVICE ---
apiVersion: v1
kind: Service
metadata:
  name: epitech-front-svc
spec:
  selector:
    app: epitech-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Plus besoin de NodePort, l'Ingress gère l'entrée

---
# --- BACKEND DEPLOYMENT ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epitech-api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: epitech-api
  template:
    metadata:
      labels:
        app: epitech-api
    spec:
      containers:
      - name: api
        image: stephanparichon/epitech-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
# --- BACKEND SERVICE ---
apiVersion: v1
kind: Service
metadata:
  name: epitech-api-svc
spec:
  selector:
    app: epitech-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP

---
# --- INGRESS TRAEFIK (Le Routeur) ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epitech-ingress
  annotations:
    # Annotation spécifique pour K3s/Traefik si besoin, 
    # mais la config standard fonctionne généralement "out of the box"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      # Règle 1 : Tout ce qui commence par /api va vers le backend
      # Traefik va transmettre la requête telle quelle (ex: /api/students)
      # Notre code Python attend bien /api/students, donc ça matche !
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: epitech-api-svc
            port:
              number: 5000
      
      # Règle 2 : Le reste (racine /) va vers le frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: epitech-front-svc
            port:
              number: 80
